@@ -57,17 +57,20 @@ classdef model_TFN_gui < model_gui_abstract
                 derivedForcingFunctions = { 'derivedForcing_linearUnconstrainedScaling', ...
                                             'derivedForcing_linearUnconstrainedScaling_dup', ...
                                             'derivedForcing_logisticScaling'};                
-                derivedWeightFunctions = {  'derivedResponseFunction_abstract', ...
-                                            'derivedweighting_UnconstrainedRescaled', ...
+                derivedWeightFunctions = {  'derivedweighting_UnconstrainedRescaled', ...
                                             'derivedweighting_PearsonsNegativeRescaled', ...
-                                            'derivedweighting_PearsonsPositiveRescaled'};
-                weightFunctions = {         'responseFunction_abstract', ...
-                                            'responseFunction_Bruggeman', ...
+                                            'derivedweighting_PearsonsPositiveRescaled', ...
+                                            'derivedweighting_PearsonsPumping', ...
+                                            %'derivedweighting_ExpPumping', ...
+                                            };
+                weightFunctions = {         'responseFunction_Bruggeman', ...
                                             'responseFunction_FerrisKnowles', ...
                                             'responseFunction_FerrisKnowlesJacobs', ...
                                             'responseFunction_Hantush', ...
                                             'responseFunction_Pearsons', ...
-                                            'responseFunction_PearsonsNegative'};
+                                            'responseFunction_PearsonsNegative', ...
+                                            %'responseFunction_Exp', ...
+                                            };
             end
                 
 
@@ -2025,8 +2028,10 @@ classdef model_TFN_gui < model_gui_abstract
             indSelected = find(selectedRow)';
             
             if (strcmp(hObject.Label,'Insert row above selection') || strcmp(hObject.Label,'Insert row below selection')) ...
-            && sum(selectedRow) == 0                             
-                selectedRow(end)=true;
+            && sum(selectedRow) == 0
+                if ~isempty(selectedRow)
+                    selectedRow(end)=true;
+                end
             elseif ~strcmp(hObject.Label,'Paste rows') && size(tableObj.Data(:,1),1)>0 &&  sum(selectedRow) == 0                             
                 h = warndlg('No rows are selected for the requested operation.', 'Selection error');
                 setIcon(this, h);
